--- a/src/main/resources/static/static/customerInfo.html
+++ b/src/main/resources/static/static/customerInfo.html
@@ -174,7 +174,7 @@
                         });
                         $.messager.progress({
                             title: '提示',
-                            msg: '文件上传中，请稍候……',
+                            msg: '文件导入中，请稍候……',
                             text: ''
                         });
                     }
