石化销售积分明细导出

--- a/src/main/resources/static/static/attacherCardPointDetails.html
+++ b/src/main/resources/static/static/attacherCardPointDetails.html
@@ -135,6 +135,20 @@
             $('#AddWin').window('open');
         }
 
+        function Export() {
+            var cardNum = $('#attacherCardPointDetailsSearchCardNum').textbox('getValue');
+            var cardBuyer = $('#attacherCardPointDetailsSearchCardBuyer').textbox('getValue');
+            var jsonObj={
+                'cardNum':cardNum,
+                'cardBuyer' :cardBuyer,
+                'page':1,
+                'rows':100000
+            };
+            var jsonStr = JSON.stringify(jsonObj);
+            var encrypted = window.btoa(jsonStr);
+            window.location.href = "/exportExcel/attacherCardPointDetailsExport?encrypted="+encrypted;
+        }
+
         function addSubmit() {
             // 显示进度条
             $.messager.progress();
@@ -227,7 +241,8 @@
            <button class="easyui-linkbutton"  onclick="Search()" data-options="iconCls:'icon-search'">搜索</button>
            <button class="easyui-linkbutton"  onclick="Clear()" data-options="iconCls:'icon-clear'">重置</button>
            <button class="easyui-linkbutton" onclick="Save()" data-options="iconCls:'icon-edit'">新增</button>
-        </div>
+           <button class="easyui-linkbutton" onclick="Export()" data-options="iconCls:'icon-redo'">导出</button>
+       </div>
     </table>
 
 
