资金流水导出

--- a/src/main/resources/static/static/capitalFlow.html
+++ b/src/main/resources/static/static/capitalFlow.html
@@ -127,6 +127,20 @@
             $('#AddWin').window('open');
         }
 
+        function Export() {
+            var payee = $('#capitalFlowSearchPayee').textbox('getValue');
+            var payer = $('#capitalFlowSearchPayer').textbox('getValue');
+            var jsonObj={
+                'payee':payee,
+                'payer' :payer,
+                'page':1,
+                'rows':100000
+            };
+            var jsonStr = JSON.stringify(jsonObj);
+            var encrypted = window.btoa(unescape(encodeURIComponent(jsonStr)));
+            window.location.href = "/exportExcel/capitalFlowExport?encrypted="+encrypted;
+        }
+
         function addSubmit() {
             // 显示进度条
             $.messager.progress();
@@ -215,6 +229,7 @@
            <button class="easyui-linkbutton"  onclick="Search()" data-options="iconCls:'icon-search'">搜索</button>
            <button class="easyui-linkbutton"  onclick="Clear()" data-options="iconCls:'icon-clear'">重置</button>
            <button class="easyui-linkbutton" onclick="Save()" data-options="iconCls:'icon-edit'">新增</button>
+           <button class="easyui-linkbutton" onclick="Export()" data-options="iconCls:'icon-redo'">导出</button>
         </div>
     </table>
 
